--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@hexlet/code",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "type": "module",
   "description": "[![Actions Status](https://github.com/zhenya30000/fullstack-javascript-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/zhenya30000/fullstack-javascript-project-lvl1/actions)",
   "main": "index.js",
   "scripts": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/zhenya30000/fullstack-javascript-project-lvl1/issues"
   },
-  "homepage": "https://github.com/zhenya30000/fullstack-javascript-project-lvl1#readme"
+  "homepage": "https://github.com/zhenya30000/fullstack-javascript-project-lvl1#readme",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  }
+  
 }
+
+  
