--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   "homepage": "https://github.com/zhenya30000/fullstack-javascript-project-lvl1#readme",
   "bin": {
     "brain-games": "bin/brain-games.js"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
-  
 }
-
-  
