Add Brain GCD game

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "bin": {
     "brain-games": "bin/brain-games.js",
     "brain-even": "games/brain-even.js",
-    "brain-calc": "games/brain-calc.js"
+    "brain-calc": "games/brain-calc.js",
+    "brain-gcd": "games/brain-gcd.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
