Add brain-prime to NPM

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "brain-games": "bin/brain-games.js",
     "brain-even": "games/brain-even.js",
     "brain-calc": "games/brain-calc.js",
-    "brain-gcd": "games/brain-gcd.js"
+    "brain-gcd": "games/brain-gcd.js",
+    "brain-progression": "games/brain-progression.js",
+    "brain-prime": "games/brain-prime.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
