All games moved to src folder, package.json updated

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "type": "module",
   "description": "[![Actions Status](https://github.com/zhenya30000/fullstack-javascript-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/zhenya30000/fullstack-javascript-project-lvl1/actions)",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,11 +18,11 @@
   "homepage": "https://github.com/zhenya30000/fullstack-javascript-project-lvl1#readme",
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "games/brain-even.js",
-    "brain-calc": "games/brain-calc.js",
-    "brain-gcd": "games/brain-gcd.js",
-    "brain-progression": "games/brain-progression.js",
-    "brain-prime": "games/brain-prime.js"
+    "brain-even": "src/games/brain-even.js",
+    "brain-calc": "src/games/brain-calc.js",
+    "brain-gcd": "src/games/brain-gcd.js",
+    "brain-progression": "src/games/brain-progression.js",
+    "brain-prime": "src/games/brain-prime.js"
   },
   "dependencies": {
     "readline-sync": "^1.4.10"
